@startuml
'https://plantuml.com/class-diagram

class InventoryManager {
start()
main()
}

class InventoryManagerController {
- inventoryModel: InventoryModel
- sceneManager: SceneManager
- sortOptions: MenuButton
- newItemName: TextField
- newSerialNum: TextField
- newItemPrice: TextField
- searchBar: TextField
- inventoryTable: TableView<Item>
- nameColumn: TableColumn<Item, String>
- serialColumn: TableColumn<Item, String>
- priceColumn: TableColumn<Item, String>

+ initialize(URL, ResourceBundle)
+ saveButtonClicked(ActionEvent)
+ loadButtonClicked(ActionEvent)
+ searchBySerialClicked(ActionEvent)
+ searchByNameClicked(ActionEvent)
+ addItemButtonClicked(ActionEvent)
+ editItemButtonClicked(ActionEvent)
+ removeItemButtonClicked(ActionEvent)
- addItemWarnings(): boolean
- noItemsFound()
- emptySearchWarning()
- noItemSelectedWarning()
}

class InventoryModel {
- inventory: ObservableList<Item>
- foundInventory: ObservableList<Item>

+ getCurSelected(): Item
+ setCurSelected(Item)
+ getNewName(): String
+ setNewName(String)
+ getNewSerial(): String
+ setNewSerial(String)
+ getNewPrice(): String
+ setNewPrice(String)
+ getInventory(): ObservableList<Item>
+ getFoundInventory(): ObservableList<Item>
+ generateHTMLOutput(): String
+ writeToHTML(File)
+ generateTSVOutput(): String
+ writeToTSV(File)
+ addItemToInventory(Item)
+ removeItemFromInventory(Item)
+ searchByName(String)
+ searchBySerial(String)
+ loadInventoryFromFile()
+ loadHTML(File)
+ loadTSV(File)
}

class Item {
- name: String
- serial: String
- price: String

+ getName(): String
+ setName(String)
+ getSerial(): String
+ setSerial(String)
+ getPrice(): String
+ setPrice(String)
}

class SceneManager {
- scenes: Map<String, Scene>

+ load()
+ getScene(String): Scene
}

class SearchManagerController {
- inventoryModel: InventoryModel
- sceneManager: SceneManager

- searchedItemView: TableView<Item>
- searchedName: TableColumn<Item, String>
- searchedSerial: TableColumn<Item, String>
- searchedPrice: TableColumn<Item, String>
+ initialize(URL, ResourceBundle)
}

class EditInventoryManagerController {
- inventoryModel: InventoryModel
- sceneManager: SceneManager
- editedItemName: TextField
- editedSerialNum: TextField
- editedItemPrice: TextField
+ getEditedItemName: TextField
+ getEditedSerialNum: TextField
+ getEditedItemPrice: TextField
+ confirmButtonClicked(ActionEvent)
+ existingSerialWarning()
+ editItemWarnings(): boolean
}

openjfx.org.Application <|-- InventoryManager
InventoryManager -- SceneManager
SceneManager -- InventoryManagerController
SceneManager -- SearchManagerController
SceneManager -- EditInventoryManagerController
InventoryManagerController -- InventoryModel
SearchManagerController -- InventoryModel
EditInventoryManagerController -- InventoryModel
InventoryModel *-- Item

@enduml